[tool.poetry]
name = "temperature-alert-agent"
version = "0.1.0"
description = ""
authors = ["Wolfrang1711"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
google-search-results = "^2.4.2"
langchain = "^0.0.149"
openai = "^0.27.4"
uagents = "0.6.2"
requests = "^2.31.0"
plyer = "^2.1.0"
pydantic = "^1.10.2"
msgpack = "^1.0.4"
bech32 = "^1.2.0"
ecdsa = "^0.18.0"
apispec = "^6.0.2"
uvicorn = "^0.20.0"
aiohttp = "^3.8.3"
cosmpy = "^0.9.1"
websockets = "^10.4"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.4"
black = "^23.1.0"
pytest = "^7.1.3"
pylint = "^2.15.3"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.13"

[tool.poetry.group.orm.dependencies]
tortoise-orm = "^0.19.2"

[tool.poetry.group.geo.dependencies]
geopy = "^2.3.0"

[tool.poetry.group.remote-agents.dependencies]
pyngrok = "^5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
